data/documentations/numpy/numpy/typing/tests/data/pass/dtype_py.comment
['text':' Methods and attributes','line_number':40,'multiline':False]
