data/documentations/numpy/numpy/typing/tests/data/fail/arrayprint_pyi.comment
['text':' E: Unexpected keyword argument','line_number':11,'multiline':False]
['text':' E: incompatible type','line_number':12,'multiline':False]
['text':' E: incompatible type','line_number':13,'multiline':False]
['text':' E: incompatible type','line_number':14,'multiline':False]
['text':' E: incompatible type','line_number':15,'multiline':False]
['text':' E: Incompatible types','line_number':16,'multiline':False]
